ecmascript/parser/tests/test262-error-references/fail/5bb13cf33cea5691.js.stderr
error: Unexpected token Some(Colon). Expected one of * for generator, private key, identifier or async
 --> $DIR/tests/test262-parser/fail/5bb13cf33cea5691.js:1:11
  |
1 | class A {a:0}
  |           ^

